# OrchestrAR

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Info.plist  Instrument.cpp  Instrument.h  OrchestrAR.cpp  PoseEstimation.cpp  PoseEstimation.h  README.md  package.json
SDL2/: SDL_mixer.h
Sounds/Keys/: bla.py
cmake-modules/: FindGLEW.cmake  FindOpenCV.cmake
include/: DrawObjects.h  DrawPrimitives.h  Instrument.h  MarkerTracker.h  PoseEstimation.h  glext.h  ownlib.h
include/cpct library/cpct-mstftm/: cpct-mstftm.sln
include/cpct library/cpct-mstftm/Debug/: cpct-mstftm.lib
include/cpct library/cpct-mstftm/Release/: cpct-mstftm.lib
include/cpct library/cpct-mstftm/cpct-mstftm/: CPCT_MSTFTM.cpp  CPCT_MSTFTM.h  ReadMe.txt  aflib.h  aflibConverter.cpp  aflibConverter.h  aflibDebug.cpp  aflibFFT.cpp  aflibFFT.h  cpct-mstftm.vcproj
include/cpct library/cpct-mstftm/cpct-mstftm/Debug/: BuildLog.htm  vc90.idb
include/cpct library/cpct-mstftm/cpct-mstftm/Release/: BuildLog.htm  vc90.idb
include/cpct library/cpct_dll/: cpct_dll.sln
include/cpct library/cpct_dll/Debug/: cpct-mstftm.lib  cpct_dll.exp  cpct_dll.ilk  cpct_dll.lib
include/cpct library/cpct_dll/Release/: cpct-mstftm.lib  cpct_dll.exp  cpct_dll.lib
include/cpct library/cpct_dll/cpct_dll/: ReadMe.txt  cpct_dll.cpp  cpct_dll.h  cpct_dll.vcproj  stdafx.cpp
include/cpct library/cpct_dll/cpct_dll/Debug/: BuildLog.htm  mt.dep  vc90.idb
include/cpct library/cpct_dll/cpct_dll/Release/: BuildLog.htm  mt.dep  vc90.idb
src/: Instrument.cpp  MarkerTracker.cpp  OrchestrAR.cpp  PoseEstimation.cpp  main.cpp
